--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ steps:
 - task: AzureResourceManagerTemplateDeployment@3
   inputs:
     deploymentScope: 'Subscription'
-    azureResourceManagerConnection: $(azureResourceManagerConnection)
+    azureResourceManagerConnection: 'sasatake-azure-service-connection'
     subscriptionId: $(subscriptionId)
     location: 'Japan East'
     templateLocation: 'Linked artifact'
