--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,12 @@
 # https://aka.ms/yaml
 
 trigger:
-- master
+- release/*
+
+variables:
+  prefix: "$(Build.SourceBranchName)"
+  resourceGroupName: "$(prefix)-rg"
+  location: "japaneast"
 
 pool:
   vmImage: "ubuntu-latest"
@@ -12,17 +17,27 @@ pool:
 stages:
   - stage: Validation
     jobs:
+      - job: CreateResourceGroup
+        steps:
+          - task: AzureCLI@2
+            inputs:
+              azureSubscription: 'sasatake-azure-service-connection'
+              scriptType: 'bash'
+              scriptLocation: 'inlineScript'
+              inlineScript: |
+                '[ az group exists -g ${resourceGroupName} == 'false' ] && az group create -g ${resourceGroupName} -l ${location}'
       - job: Validation
         steps:
           - task: AzureResourceManagerTemplateDeployment@3
             inputs:
-              deploymentScope: "Subscription"
+              deploymentScope: "Resource Group"
               azureResourceManagerConnection: "sasatake-azure-service-connection"
               subscriptionId: $(subscriptionId)
-              location: "Japan East"
+              resourceGroupName: $(resourceGroupName)
               templateLocation: "Linked artifact"
               csmFile: "azuredeploy.json"
               csmParametersFile: "azuredeploy.parameters.json"
+              overrideParameters: "-prefix $(prefix)"
               deploymentMode: "Validation"
 
   - stage: Release
@@ -33,11 +48,12 @@ stages:
         steps:
           - task: AzureResourceManagerTemplateDeployment@3
             inputs:
-              deploymentScope: "Subscription"
+              deploymentScope: "Resource Group"
               azureResourceManagerConnection: "sasatake-azure-service-connection"
               subscriptionId: $(subscriptionId)
-              location: "Japan East"
+              resourceGroupName: $(resourceGroupName)
               templateLocation: "Linked artifact"
               csmFile: "azuredeploy.json"
               csmParametersFile: "azuredeploy.parameters.json"
+              overrideParameters: "-prefix $(prefix)"
               deploymentMode: "Incremental"
