--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ stages:
             scriptType: 'bash'
             scriptLocation: 'inlineScript'
             inlineScript: |
-              "[ $(az group exists -g ${1}) == 'false' ] && az group create -g ${1} -l ${2}"
+              "if [ $(az group exists -g ${1}) == 'false' ];then az group create -g ${1} -l ${2};fi"
             arguments: "$(resourceGroupName) $(location)"
 
   - stage: Validation
